--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "bootstrap": "^4.4.1",
         "firebase": "^7.14.2",
         "material-design-icons": "^3.0.1",
+        "ngeohash": "^0.6.3",
         "react": "^16.13.1",
         "react-bootstrap": "^1.0.0",
         "react-dom": "^16.13.1",
