--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "react-rounded-image": "^2.0.2",
         "react-router": "^5.1.2",
         "react-router-dom": "^5.1.2",
-        "react-scripts": "3.4.1"
+        "react-scripts": "3.4.1",
+        "uuid": "^8.1.0"
     },
     "scripts": {
         "start": "react-scripts start",
