--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "react": "^16.13.1",
         "react-bootstrap": "^1.0.0",
         "react-dom": "^16.13.1",
+        "react-graceful-image": "^1.5.0",
         "react-map-gl": "^5.2.3",
         "react-rounded-image": "^2.0.2",
         "react-router": "^5.1.2",
