Added search suggestion feature using algolia

--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
+        "algoliasearch": "^4.3.1",
         "bootstrap": "^4.4.1",
         "firebase": "^7.14.2",
+        "instantsearch.js": "^4.7.0",
         "material-design-icons": "^3.0.1",
         "ngeohash": "^0.6.3",
         "react": "^16.13.1",
